Bug 154843 - The recently used application menu doesn't correctly display the filenames
Summary: The recently used application menu doesn't correctly display the filenames
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: widget-kickoff (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-12-30 08:03 UTC by Francescu Garoby
Modified: 2007-12-30 10:18 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Francescu Garoby 2007-12-30 08:03:55 UTC
Version:            (using KDE KDE 3.97.0)
Installed from:    Ubuntu Packages
OS:                Linux

In the Recently used application, in Kickoff, there is a section called 'Documents' with recently open files.
If a file has a name like this : "Name.of.the.file.extension", just the first word is displayed ("Name")
But, when the mouse is over, the URL is correct ("/path/to/the/file/Name.of.the.file.extension").
Comment 1 Jason Stubbs 2007-12-30 10:18:17 UTC
SVN commit 754576 by jstubbs:

Remove the .desktop portion and then take the completeBaseName() of the file
so that file names with embedded "."s are displayed correctly.

BUG: 154843


 M  +2 -2      models.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=754576