Remove the .desktop portion and then take the completeBaseName() of the file so that file names with embedded "."s are displayed correctly.

BUG: 154843

svn path=/trunk/KDE/kdebase/workspace/; revision=754576